[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/main_container/left_container/export_to_file/export_to_file.gd" type="Script" id=1]
[ext_resource path="res://scenes/main_container.tres" type="Theme" id=2]
[ext_resource path="res://scenes/main_container/left_container/export_to_file/dir_path/DirPath.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/utility/python_watcher/PythonWatcher.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/main_container/left_container/export_to_file/table_file/TableFile.tscn" type="PackedScene" id=5]

[node name="ExportToFile" type="WindowDialog"]
margin_right = 435.0
margin_bottom = 479.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DirPath" parent="Container" instance=ExtResource( 3 )]
margin_top = 0.0
margin_right = 435.0
margin_bottom = 24.0

[node name="TableFile" parent="Container" instance=ExtResource( 5 )]
margin_top = 28.0
margin_right = 435.0
margin_bottom = 453.0

[node name="Actions" type="HBoxContainer" parent="Container"]
margin_top = 457.0
margin_right = 435.0
margin_bottom = 479.0
alignment = 2

[node name="Start" type="Button" parent="Container/Actions"]
margin_left = 336.0
margin_right = 377.0
margin_bottom = 22.0
text = "Start"

[node name="Cancel" type="Button" parent="Container/Actions"]
margin_left = 381.0
margin_right = 435.0
margin_bottom = 22.0
text = "Cancel"

[node name="PythonWatcher" parent="." instance=ExtResource( 4 )]

[connection signal="pressed" from="Container/Actions/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Container/Actions/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="output" from="PythonWatcher" to="." method="_on_PythonWatcher_output"]
